--- a/yndex.html
+++ b/yndex.html
@@ -7,5 +7,6 @@
 </head>
 <body>
       <h1> это проверка отвечаю </h1>
+      <img src="git remote add origin https://github.com/taryel08/Kyrgyzz.git" alt="">
 </body>
 </html>
